-Added a mask and trophy for spooky spirit
-Added new sprites for the eye valley chest weapons and their upgrades
-Added a various new pets and light pets
-Added a bunch of new spooky mod angler quest fishes
-Added pelusa's developer vanity mask
-Added seeds for the valley of eyes grass blocks
-Added support for the 1.4.4 version of boss checklist
-Added support for Gabehaswon's music display mod




~CHANGES TO EXISTING CONTENT~


Items & Weapons:

-Renamed loose soil to swamp soil
-Renamed rocky soil to swamp rock
-Renamed the eye armor to living flesh armor
-Living flesh platforms can now be crafted without a crafting station
-All spooky mod boss masks now drop from their respective bosses treasure bag in expert mode to be consistent with vanilla
-Buffed the use speed for the toilet paper and necromancy for dummies
-Buffed the creepy candle's magic damage bonus from 5% to 7%
-Increased the drop rate for all of the zomboid warlock's drops
-Renamed the rotten chunk to moldy chunk because rotten chunks are already an item in terraria
-Rotten gourd armor now requires old wood to craft along with moldy chunks, and buffed the amount of defense each piece of the armor gives you
-Increased harvester's scythe knockback quite a bit
-The harvester's scythe now spawns souls when you hit enemies instead of killing them, and you now need 10 souls in order for them to chase enemies
-Changed the sound effect for the skull smasher's right click ability when it is ready to throw
-Increased all orro & boro weapon sell prices because they were far too low
-Renamed the acid blaster to venom gasser, nerfed its base damage from 50 to 30, it now inflicts venom, pierces enemies, can no longer go through blocks, and has a cool new visual effect
-Nerfed the gargoyle scepter's base damage from 65 to 45, and the cursed fire balls shot by grug now inflict cursed inferno on enemies