@@ -1,0 +1,32 @@
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+using Terraria.ObjectData;
+using Terraria.DataStructures;
+using Terraria.Audio;
+using Microsoft.Xna.Framework;
+using Microsoft.Xna.Framework.Graphics;
+
+namespace Spooky.Content.Tiles.Catacomb.Furniture
+{
+	public class CatacombCrateTile : ModTile
+    {
+		public override void SetStaticDefaults()
+		{
+			Main.tileFrameImportant[Type] = true;
+			Main.tileSolidTop[Type] = true;
+			Main.tileTable[Type] = true;
+			TileObjectData.newTile.CopyFrom(TileObjectData.Style2x2);
+			TileObjectData.newTile.CoordinateHeights = new int[2] { 16, 16 };
+			TileObjectData.newTile.StyleHorizontal = true;
+			TileObjectData.addTile(Type);
+            AddMapEntry(new Color(130, 110, 82));
+            DustType = DustID.WoodFurniture;
+        }
+
+        public override void NumDust(int i, int j, bool fail, ref int num)
+        {
+            num = fail ? 1 : 3;
+        }
+    }
+}
